# zk_onchain

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
client/: Cargo.toml  README.md  client_config.ini
client/src/: lib.rs  main.rs
client/src/builder/admin/: mod.rs  vault_config.rs
client/src/settings/: config.rs  rpc.rs
client/src/user/: compress_tokens.rs  compressed_mint.rs  compressed_transfer_ix.rs  compressed_vault_bump.rs  compressed_wallet_transfer.rs  cpda_tokens_transfer.rs  mod.rs  server_vault.rs  user_vault.rs
client/src/utils/: config.rs  mod.rs  pinata_service.rs  spl.rs  vectorizer.rs
programs/zk_onchain/: Cargo.toml
programs/zk_onchain/src/: lib.rs
programs/zk_onchain/src/compressed_transfers/: mod.rs  user_vault_transfer.rs
programs/zk_onchain/src/instructions/: mod.rs  server.rs  user.rs
programs/zk_onchain/src/marketplace/: mint.rs  mod.rs  vaults.rs
programs/zk_onchain/src/state/: error.rs  mod.rs  seeds.rs
programs/zk_onchain/src/user/: compress_tokens.rs  create_compressed_mint.rs  decompress_tokens.rs  mint_to.rs  mod.rs  transfer_compressed_tokens.rs
programs/zk_onchain/src/utils/: token.rs
programs/zk_onchain/src/vaults/: airdrop_vault.rs  escrow_vault.rs  mod.rs  server_vault.rs  user_vault.rs  vault_config.rs
scripts/: devnet.sh  install.sh  localnet.sh
tests/: setup.ts  soda_onchain.ts  test.ts
tests/utils/: compression.ts  helpers.ts  readAPI.ts  utils.ts
