[workspace]
members = ["client", "programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


[workspace.dependencies]
anchor-client = { version = "=0.29.0" }
anchor-lang = "=0.29.0"
anchor-spl = "=0.29.0"

light-sdk = "=0.11.0"
light-macros = "=1.1.0"
light-sdk-macros = "=0.4.0"
light-utils = "=1.1.0"
light-verifier = "=1.1.0"
light-client = { git = "https://github.com/lightprotocol/light-protocol", rev = "80fb05c6c0718e0a235e8f02eaab77477827da5f" }
light-test-utils = { version = "=1.2.1" }
light-hasher = { version = "=1.1.0" }
light-compressed-token = { version = "=1.2.0" }
account-compression = { version = "=1.2.0" }
light-system-program = { version = "=1.2.0" }
forester-utils = { version = "=1.2.0" }
forester = { git = "https://github.com/lightprotocol/light-protocol", rev = "80fb05c6c0718e0a235e8f02eaab77477827da5f" }

# photon-api models deserialization error on AccountData Discriminator i32 : changed to i64 in fork 
photon-api = { git = "https://github.com/taimurey/light-protocol.git", rev = "1c81a3e14c6edc541be1c466e58512c6e4eed501" }

log = "=0.4.22"
env_logger = "=0.11.5"
tokio = { version = "=1.41.1" }
shellexpand = "=3.1.0"

serde = "=1.0.215"
configparser = "=3.1.0"
eyre = "=0.6.12"
anyhow = "=1.0.93"
clap = { version = "=4.5.21" }
bincode = "=1.3.3"
serde_json = "=1.0.132"
bs58 = "=0.5.1"

solana-sdk = "=1.18.22"
solana-client = "=1.18.22"
mpl-token-metadata = "=5.1.0"
solana-program = "=1.18.22"
base64 = "=0.22.1"

[patch.crates-io]
"solana-account-decoder" = { git = "https://github.com/lightprotocol/agave", branch = "v1.18.22-enforce-cpi-tracking" }
"solana-accounts-db" = { git = "https://github.com/lightprotocol/agave", branch = "v1.18.22-enforce-cpi-tracking" }
"solana-banks-client" = { git = "https://github.com/lightprotocol/agave", branch = "v1.18.22-enforce-cpi-tracking" }
"solana-banks-interface" = { git = "https://github.com/lightprotocol/agave", branch = "v1.18.22-enforce-cpi-tracking" }
"solana-banks-server" = { git = "https://github.com/lightprotocol/agave", branch = "v1.18.22-enforce-cpi-tracking" }
"solana-program" = { git = "https://github.com/lightprotocol/agave", branch = "v1.18.22-enforce-cpi-tracking" }
"solana-cli-output" = { git = "https://github.com/lightprotocol/agave", branch = "v1.18.22-enforce-cpi-tracking" }
"solana-program-test" = { git = "https://github.com/lightprotocol/agave", branch = "v1.18.22-enforce-cpi-tracking" }
"solana-program-runtime" = { git = "https://github.com/lightprotocol/agave", branch = "v1.18.22-enforce-cpi-tracking" }
"solana-rpc" = { git = "https://github.com/lightprotocol/agave", branch = "v1.18.22-enforce-cpi-tracking" }
"solana-rpc-client" = { git = "https://github.com/lightprotocol/agave", branch = "v1.18.22-enforce-cpi-tracking" }
"solana-rpc-client-api" = { git = "https://github.com/lightprotocol/agave", branch = "v1.18.22-enforce-cpi-tracking" }
"solana-runtime" = { git = "https://github.com/lightprotocol/agave", branch = "v1.18.22-enforce-cpi-tracking" }
"solana-sdk" = { git = "https://github.com/lightprotocol/agave", branch = "v1.18.22-enforce-cpi-tracking" }
"solana-sdk-macro" = { git = "https://github.com/lightprotocol/agave", branch = "v1.18.22-enforce-cpi-tracking" }
"solana-client" = { git = "https://github.com/lightprotocol/agave", branch = "v1.18.22-enforce-cpi-tracking" }
"solana-zk-token-sdk" = { git = "https://github.com/lightprotocol/agave", branch = "v1.18.22-enforce-cpi-tracking" }
"solana-frozen-abi" = { git = "https://github.com/lightprotocol/agave", branch = "v1.18.22-enforce-cpi-tracking" }
"solana-frozen-abi-macro" = { git = "https://github.com/lightprotocol/agave", branch = "v1.18.22-enforce-cpi-tracking" }
"solana-transaction-status" = { git = "https://github.com/lightprotocol/agave", branch = "v1.18.22-enforce-cpi-tracking" }
