[package]
name = "zk_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = { workspace = true, features = ["async"] }
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }

serde = { workspace = true }
configparser = { workspace = true }

eyre = { workspace = true }
anyhow = { workspace = true }

clap = { workspace = true, features = ["derive"] }

bincode = { workspace = true }
serde_json = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }

photon-api = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true, features = ["full"] }
shellexpand = { workspace = true }

light-utils = { workspace = true }
light-sdk = { workspace = true, features = ["legacy"] }
light-compressed-token = { workspace = true, features = ['no-entrypoint'] }
light-system-program = { workspace = true, features = ['no-entrypoint'] }
account-compression = { workspace = true }
forester-utils = { workspace = true }
forester = { workspace = true }
light-client = { workspace = true }
light-test-utils = { workspace = true, features = ["devenv"] }

mpl-token-metadata = { workspace = true }

zk_onchain = { path = "../programs/zk_onchain", features = [
    "no-entrypoint",
    "client",
] }
rand = "0.8.5"
